# conto-corrente

./: Bonifico.cpp  Bonifico.h  CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Investimento.cpp  Investimento.h  ListaMovimenti.txt  Prelievo.cpp  Prelievo.h  README.md  Transazione.cpp  Transazione.h  Versamento.cpp  Versamento.h  bonifico.cpp  bonifico.h  contocorrente.cpp  contocorrente.h  investimento.cpp  investimento.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prelievo.cpp  prelievo.h  transazione.cpp  transazione.h  versamento.cpp  versamento.h
test/: BonificoTest.cpp  CMakeLists.txt  ContoCorrenteTest.cpp  InvestimentoTest.cpp  PrelievoTest.cpp  VersamentoTest.cpp
